--- a/grafico/graficoEvolutivo.html
+++ b/grafico/graficoEvolutivo.html
@@ -1,34 +1,43 @@
 <html>
 
-<head>
-    <title>TODO supply a title</title>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="#" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="./graficoEvolutivo.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="./graficoEvolutivo.js"></script>
-</head>
+    <head>
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <link rel="shortcut icon" href="#"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="./graficoEvolutivo.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
+        <script src="./graficoEvolutivo.js" type="text/javascript"></script>
+        <script>
+            $(document).ready(function(){
+                var url="https://www.countryflags.io/"+ countryCode +"/flat/64.png"
+                $("#bandera-div").attr("src", url);
+            });
+        </script>
+    </head>
 
-<body>
-    <!-- <div class="div-body"> -->
-    <div class="container mx-auto" style="width: 1200px; margin-top: 20px;">
-        <div class=" div-titulo">
-            <h2 class="h2-titulo" id="titulo">Gráfico Evolutivo</h2>
-            <div class="div-bandera" id="bandera-div"></div>
+    <body>
+        <!-- <div class="div-body"> -->
+        <div class="container mx-auto" style="width: 1200px; margin-top: 20px;">
+            <div class=" div-titulo">
+                <h2 class="h2-titulo" id="titulo">Gráfico Evolutivo</h2>
+                <img class="div-bandera" id="bandera-div">
+            </div>
+            <hr/>
+            <a class="btn btn-primary" href="../index.html" role="button">Regresar al Resumen General</a>
+            <a id="redirect-detalle" class="btn btn-primary" href="../detallePais/detallePais.html" role="button">Regresar
+                al
+                Detalle</a>
+            <hr/>
+            <h4>Total de casos desde el día uno</h4>
+            <div class="div-grafico" id="div-grafico">
+            </div>
         </div>
-        <hr />
-        <a class="btn btn-primary" href="../index.html" role="button">Regresar al Resumen General</a>
-        <a id="redirect-detalle" class="btn btn-primary" href="./detallePais/detallePais.html" role="button">Regresar al
-            Detalle</a>
-        <hr />
-        <h4>Total de casos desde el día uno</h4>
-        <div class="div-grafico" id="div-grafico">
-        </div>
-</body>
+    </body>
 
 </html>
